tests/ui/feature-gates/feature-gate-asm_goto.stderr
error[E0658]: label operands for inline assembly are unstable
  --> $DIR/feature-gate-asm_goto.rs:7:24
   |
LL |         asm!("jmp {}", label {});
   |                        ^^^^^^^^
   |
   = note: see issue #119364 <https://github.com/rust-lang/rust/issues/119364> for more information
   = help: add `#![feature(asm_goto)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
